Bug 469563 - Strange button in "Emoji font" dialog
Summary: Strange button in "Emoji font" dialog
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: unspecified All
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-10 07:36 UTC by Kwok Guy
Modified: 2023-06-12 13:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The screenshot (68.38 KB, image/png)
2023-05-10 07:36 UTC, Kwok Guy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kwok Guy 2023-05-10 07:36:54 UTC
Created attachment 158818 [details]
The screenshot

STEPS TO REPRODUCE
1. Settings -> Create new Profile
2. Appearance -> Complex Text Layout
3. Click "Emoji Font"

OBSERVED RESULT
A strange button is located at the upper left in the "Select font" dialog, with no text tagged on it, and clicking it results in nothing.

EXPECTED RESULT
I think this button should not exist.

SOFTWARE/OS VERSIONS
Operating System: Debian testing
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Paul Worrall 2023-05-10 08:07:38 UTC
Confirmed in 23.04.0 on Arch
Comment 2 Bug Janitor Service 2023-06-07 13:45:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/859
Comment 3 Theodore Wang 2023-06-12 13:44:38 UTC
Git commit 4ad81a77175b20341f62a51f3d8c7c681ae10294 by Theodore Wang.
Committed on 12/06/2023 at 12:19.
Pushed by fusionfuture into branch 'master'.

Hides redundant widgets on dialog for emoji font selection

_showAllFonts and _showAllFontsWarning widgets only have functionality for non emoji font selection dialog.
They are shown as redundant and blank widgets at a misplaced position for emoji font selection dialog.
This change simply hides them.

M  +2    -0    src/FontDialog.cpp

https://invent.kde.org/utilities/konsole/-/commit/4ad81a77175b20341f62a51f3d8c7c681ae10294
Comment 4 Fushan Wen 2023-06-12 13:45:16 UTC
Git commit f380f10d69cffe1547c4a6b40cc1a36e4e019bcd by Fushan Wen, on behalf of Theodore Wang.
Committed on 12/06/2023 at 13:45.
Pushed by fusionfuture into branch 'release/23.04'.

Hides redundant widgets on dialog for emoji font selection

_showAllFonts and _showAllFontsWarning widgets only have functionality for non emoji font selection dialog.
They are shown as redundant and blank widgets at a misplaced position for emoji font selection dialog.
This change simply hides them.


(cherry picked from commit 4ad81a77175b20341f62a51f3d8c7c681ae10294)

M  +2    -0    src/FontDialog.cpp

https://invent.kde.org/utilities/konsole/-/commit/f380f10d69cffe1547c4a6b40cc1a36e4e019bcd