src/FontDialog.cpp
@@ -52,6 +52,8 @@ FontDialog::FontDialog(QWidget *parent, bool emoji, const QFont font)
                            "👆🏻 👆🏼 👆🏽 👆🏾 👆🏿     👨‍❤️‍👨 👨‍❤️‍💋‍👨 👩‍👩‍👧‍👧 👩🏻‍🤝‍👨🏿 👨‍👨‍👧‍👦 \U0001F468\u200D\u2764\uFE0F\u200D\U0001F468  \U0001F468\u200D\u2764\u200D\U0001F468\n"
                            "🇧🇲 🇨🇭 🇨🇿 🇪🇺 🇬🇱 🇲🇬 🇲🇹 🇸🇿 🇿🇲"));
         /* clang-format on */
+        _showAllFonts->hide();
+        _showAllFontsWarningButton->hide();
     } else {
         _fontChooser->setSampleText(
             QStringLiteral("0OQ 1Il!| 5S 8B rnm :; ,. \"'` ~-= ({[<>]})\n"
